--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer data-domain="purple-airdrop.vercel.app" src="https://plausible.io/js/script.js"></script>
+    <script defer data-domain="purpleairdrop.xyz" src="https://plausible.io/js/script.js"></script>
     <title>Purple Airdrop</title>
   </head>
   <body>
