New airdrop ethena added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer data-domain="purpleairdrop.xyz" src="https://plausible.io/js/script.js"></script>
+    <script src="https://terminal.jup.ag/main-v4.js" data-preload defer></script>
     <title>Purple Airdrop</title>
   </head>
   <body>
